Inmob-Salesforce/force-app/main/default/objects/Implantacion__c/Implantacion__c.object-meta.xml
<CustomObject>
    <label>Implantación</label>
    <nameField>
        <label>Nombre de Implantación</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Implantaciones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>