Inmob-Salesforce/force-app/main/default/objects/Implantacion__c/fields/codigo__c.field-meta.xml
<CustomField>
    <fullName>codigo__c</fullName>
    <label>codigo</label>
    <length>150</length>
    <type>Text</type>
</CustomField>