Inmob-Salesforce/force-app/main/default/objects/Implantacion__c/fields/Impuesto__c.field-meta.xml
<CustomField>
    <fullName>Impuesto__c</fullName>
    <label>Impuesto</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>