Inmob-Salesforce/force-app/main/default/objects/Implantacion__c/fields/Modelo__c.field-meta.xml
<CustomField>
    <fullName>Modelo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Modelo</label>
    <referenceTo>Modelo__c</referenceTo>
    <relationshipLabel>Implantaciones</relationshipLabel>
    <relationshipName>Implantaciones</relationshipName>
    <type>Lookup</type>
</CustomField>