Inmob-Salesforce/force-app/main/default/objects/Implantacion__c/fields/Modelo_Especial__c.field-meta.xml
<CustomField>
    <fullName>Modelo_Especial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Modelo Especial</label>
    <type>Checkbox</type>
</CustomField>