Inmob-Salesforce/force-app/main/default/objects/Implantacion__c/fields/Modelo_Principal__c.field-meta.xml
<CustomField>
    <fullName>Modelo_Principal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Modelo Principal</label>
    <type>Checkbox</type>
</CustomField>