Inmob-Salesforce/force-app/main/default/objects/Implantacion__c/fields/Modelo_Tipo__c.field-meta.xml
<CustomField>
    <fullName>Modelo_Tipo__c</fullName>
    <label>Modelo Tipo</label>
    <length>10</length>
    <type>Text</type>
</CustomField>