Inmob-Salesforce/force-app/main/default/objects/Implantacion__c/fields/Num_pagina__c.field-meta.xml
<CustomField>
    <fullName>Num_pagina__c</fullName>
    <label>Num pagina</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>