Inmob-Salesforce/force-app/main/default/objects/Implantacion__c/fields/Precio_Lista__c.field-meta.xml
<CustomField>
    <fullName>Precio_Lista__c</fullName>
    <label>Precio Lista</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>