Inmob-Salesforce/force-app/main/default/objects/Implantacion__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Lote__c</columns>
    <columns>Modelo__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Modelo__c</field>
        <operation>contains</operation>
        <value>BURGO</value>
    </filters>
    <label>Todos</label>
</ListView>